# menu_structure

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
app/menu_structure/: CMakeLists.txt
app/menu_structure/menu_structure/: CMakeLists.txt
app/menu_structure/menu_structure/.project/cmake_build/: Fetch_project_dependencies.cmake
app/menu_structure/menu_structure/inc/: signal_classes.h
app/menu_structure/menu_structure/libs/asciify_bmp/: CMakeLists.txt
app/menu_structure/menu_structure/libs/asciify_bmp/src/: asciify_bmp.c
app/menu_structure/menu_structure/libs/menu_structure/: CMakeLists.txt
app/menu_structure/menu_structure/libs/menu_structure/doc/: menu_structure.html  parser.html
app/menu_structure/menu_structure/libs/menu_structure/inc/: menu_structure.h  menu_structure_functions.h
app/menu_structure/menu_structure/libs/menu_structure/src/: menu_structure.c  menu_structure_functions.c
app/menu_structure/menu_structure/libs/menu_structure/test/: CMakeLists.txt
app/menu_structure/menu_structure/libs/menu_structure/test/tinc/: signal_classes.h
app/menu_structure/menu_structure/libs/menu_structure/test/tsrc/: main.c  ut_menu_structure_test.c
app/menu_structure/menu_structure/src/: main.c
cmake/compilers/: toolchain-clang.cmake  toolchain-ti-armcl.cmake  toolchain-ti-cl2000.cmake  toolchain-xc16.cmake
cmake/modules/: FindChsm.cmake  FindExtPackages.cmake  FindUnity.cmake
cmake/utils/: Fetch_platform_dependencies.cmake  code_refactor.cmake  color_print.cmake  diagnostic.cmake  find.cmake  graphviz.cmake  output_generation.cmake
